--- a/apps/frontend/src/components/Homepage/Navbar/navbar.css
+++ b/apps/frontend/src/components/Homepage/Navbar/navbar.css
@@ -1,7 +1,7 @@
 .nav {
   background-color: var(--navbar-bg-color);
   width: 100%;
-  height: 5vh;
+  height: 80px;
   display: flex;
   align-items: center;
   justify-content: space-between;
