--- a/apps/frontend/src/components/Homepage/Footer/footer.css
+++ b/apps/frontend/src/components/Homepage/Footer/footer.css
@@ -4,7 +4,7 @@
   display: flex;
   flex-direction: column;
   gap: 2rem;
-  height: 100%;
+  height: fit-content;
 }
 
 .footer-info {
@@ -24,4 +24,16 @@
 .footer-account {
   display: flex;
   flex-direction: column;
+}
+
+.footer a{
+  color: #000000;
+  font-size: 1.5rem;
+  text-decoration: none;
+  font-weight: 300;
+}
+
+.footer a:hover{
+  font-weight: 400;
+  text-decoration:underline;
 }
