--- a/apps/frontend/src/components/Homepage/Main/main.css
+++ b/apps/frontend/src/components/Homepage/Main/main.css
@@ -8,5 +8,26 @@
 .main-content {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+}
+
+@media only screen and (min-width: 1024px){
+
+  .main-content{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+  }
+
+  .main-content h1{
+    font-size: 4rem;
+  }
+  .main-content p{
+    font-size: 2rem;
+  }
+
+  .main-button{
+    margin-top: 2rem;
+  }
+
 }
