--- a/apps/frontend/src/components/Homepage/ProductCarousel/productCarousel.css
+++ b/apps/frontend/src/components/Homepage/ProductCarousel/productCarousel.css
@@ -3,7 +3,7 @@
   padding: 1rem 2rem 2rem 2rem;
 }
 
-.product-carousel__content{
+.product-carousel__content {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -22,6 +22,7 @@
   display: flex;
   flex-direction: column;
   justify-content: center;
+  border-radius: 1rem;
 }
 
 .image-container {
@@ -31,4 +32,43 @@
 .image-container img {
   width: 100%;
   height: 100%;
+}
+
+@media only screen and (min-width: 1024px) {
+  .product-carousel__content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: 1fr;
+    grid-column-gap: 0px;
+    grid-row-gap: 0px;
+  }
+
+  .text-container {
+    grid-area: 1 / 1 / 2 / 2;
+  }
+  .carousel {
+    grid-area: 1 / 2 / 2 / 3;
+  }
+
+  .text-container,
+  .carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    font-size: 2rem;
+  }
+
+  .all-products {
+    flex-direction: column;
+  }
+  .carousel-container {
+    padding: 1rem;
+    width: 400px;
+    height: 400px;
+  }
+
+  .image-container {
+    height: 350px;
+  }
 }
