--- a/apps/frontend/src/components/Navbar/navbar.css
+++ b/apps/frontend/src/components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 .nav {
   background-color: var(--navbar-bg-color);
   width: 100%;
-  height: 70px;
+  height: 8vh;
   display: flex;
   align-items: center;
   justify-content: space-between;
@@ -38,24 +38,19 @@
 }
 
 .nav-desktop {
-  display: flex;
-  align-items: center;
-  visibility: none;
-  height: 0;
-  width: 0;
+  display: none;
 }
 
 @media only screen and (min-width: 1024px) {
   .nav-desktop {
-    visibility: visible;
+    display: flex;
+    align-items: center;
     height: 100%;
     width: auto;
     margin-right: 1rem;
   }
 
   .nav__icons {
-    visibility: none;
-    height: 0;
-    width: 0;
+    display: none;
   }
 }
