--- a/apps/frontend/src/Pages/Homepage/Main/main.css
+++ b/apps/frontend/src/Pages/Homepage/Main/main.css
@@ -1,8 +1,12 @@
 .main {
   height: fit-content;
   padding: 1rem 2rem 2rem 2rem;
-  text-align: justify;
+  text-align: center;
   background-color: var(--primary-color);
+}
+
+.main-button {
+  margin-top: var(--large-indent);
 }
 
 .main-content {
@@ -19,13 +23,9 @@
   }
 
   .main-content h1 {
-    font-size: 4rem;
+    font-size: var(--extra-font);
   }
   .main-content p {
-    font-size: 2rem;
-  }
-
-  .main-button {
-    margin-top: 2rem;
+    font-size: var(--large-font);
   }
 }
