--- a/apps/frontend/src/Pages/Homepage/ProductCarousel/productCarousel.css
+++ b/apps/frontend/src/Pages/Homepage/ProductCarousel/productCarousel.css
@@ -1,40 +1,46 @@
 .product-carousel {
   background-color: var(--secondary-color);
   padding: 1rem 2rem 2rem 2rem;
+  display: flex;
+  justify-content: center;
 }
 
 .product-carousel__content {
   display: flex;
   flex-direction: column;
-  gap: 1rem;
+  gap: var(--normal-indent);
 }
 
 .all-products {
   display: flex;
   align-items: center;
-  gap: 1rem;
+  gap: var(--normal-indent);
 }
 
 .carousel-container {
-  width: 297px;
+  width: 300px;
   height: 250px;
-  background-color: rgba(172, 172, 172, 0.418);
+  background-color: var(--carousel-background);
   display: flex;
   flex-direction: column;
   justify-content: center;
-  border-radius: 1rem;
+  border-radius: var(--normal-indent);
 }
 
 .image-container {
   height: 250px;
 }
 
-.image-container img {
+.image-container__image {
   width: 100%;
   height: 100%;
 }
 
 @media only screen and (min-width: 1024px) {
+  .product-carousel {
+    display: block;
+  }
+
   .product-carousel__content {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
@@ -56,14 +62,14 @@
     justify-content: center;
     align-items: center;
     flex-direction: column;
-    font-size: 2rem;
+    font-size: var(--large-font);
   }
 
   .all-products {
     flex-direction: column;
   }
   .carousel-container {
-    padding: 1rem;
+    padding: var(--normal-indent);
     width: 400px;
     height: 400px;
   }
