--- a/apps/frontend/src/Pages/Login/login.css
+++ b/apps/frontend/src/Pages/Login/login.css
@@ -1,3 +1,9 @@
+:root {
+  --input-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.315);
+  --input-border: 2px solid rgba(0, 0, 0, 0.075);
+  --button-hovor-color: rgba(0, 0, 0, 0.842);
+}
+
 .login {
   display: flex;
   height: 100vh;
@@ -12,28 +18,28 @@
   flex-direction: column;
   text-align: center;
   width: 325px;
-  padding: 1rem;
+  padding: var(--normal-indent);
 }
 
 .login__form {
   display: flex;
   flex-direction: column;
   align-items: center;
-  gap: 1rem;
+  gap: var(--normal-indent);
 }
 
 .form-input {
   width: 100%;
   padding: 1rem 0rem 1rem 0.5rem;
-  font-size: 1rem;
+  font-size: var(--primary-indent);
   border: none;
   background-color: #ffffff;
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.315);
+  box-shadow: var(--input-box-shadow);
   border-radius: 0.5rem;
 }
 
 .form-input:focus {
-  border: 2px solid rgba(0, 0, 0, 0.075);
+  border: var(--input-border);
   outline: none;
 }
 
@@ -42,13 +48,13 @@
 }
 
 .form-input::placeholder {
-  color: rgb(41, 41, 41);
-  padding-left: 0.5rem;
+  color: var(--placeholder-color);
+  padding-left: var(--small-indent);
 }
 
 .form-button {
   width: 100%;
-  font-size: 1rem;
+  font-size: var(--primary-indent);
   padding: 0.5rem 0rem 0.5rem 0rem;
   border: none;
   border-radius: 0.5rem;
@@ -58,18 +64,19 @@
 }
 
 .form-button:hover {
-  background-color: rgba(0, 0, 0, 0.842);
+  background-color: var(--button-hovor-color);
 }
 
 .login__headline {
-  margin: 1rem 0 1rem 0;
+  margin-top: var(--normal-indent);
+  margin-bottom: var(--normal-indent);
 }
 
 .login-questions {
-  margin-top: 2rem;
+  margin-top: var(--large-indent);
   display: flex;
   flex-direction: column;
-  gap: 0.5rem;
+  gap: var(--small-indent);
 }
 
 .login-questions a {
@@ -77,37 +84,37 @@
 }
 
 .login-image {
-  height: 500px;
-  width: 500px;
-  position: fixed;
-  left: -300px;
-  bottom: -40px;
   display: none;
-}
-
-.bob {
-  height: 100%;
-  width: 100%;
-  position: absolute;
-  transform: translateY(0);
-
-  animation: jump 1s ease infinite alternate;
-}
-
-@keyframes jump {
-  0% {
-    bottom: 0;
-  }
-  50% {
-    bottom: 40px;
-  }
-  100% {
-    bottom: 0;
-  }
 }
 
 @media only screen and (min-width: 1024px) {
   .login-image {
     display: block;
+    height: 500px;
+    width: 500px;
+    position: fixed;
+    left: -300px;
+    bottom: -40px;
+  }
+
+  .bob {
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    transform: translateY(0);
+
+    animation: jump 1.5s ease-in-out infinite alternate;
+  }
+
+  @keyframes jump {
+    0% {
+      bottom: 0;
+    }
+    50% {
+      bottom: 30px;
+    }
+    100% {
+      bottom: 0;
+    }
   }
 }
