--- a/apps/frontend/src/globalStyles.css
+++ b/apps/frontend/src/globalStyles.css
@@ -1,14 +1,30 @@
 /* You can add global styles to this file, and also import other style files */
 
 :root {
+  /* Colors */
   --primary-color: #edae49;
   --secondary-color: #fae8eb;
   --text-color: rgb(19, 19, 19);
-
   --navbar-bg-color: #23ce6b;
+  --error-message: rgba(255, 0, 0, 0.801);
+  --carousel-background: rgba(0, 0, 0, 0.774);
+  --placeholder-color: rgb(41, 41, 41);
 
+  /* Indent */
+  --small-indent: 0.5rem;
+  --normal-indent: 1rem;
+  --medium-indent: 1.5rem;
+  --large-indent: 2rem;
+
+  /* Sizes */
   font-size: 16px;
   font-family: "Cairo Play", sans-serif;
+
+  --small-font: 0.5rem;
+  --normal-font: 1rem;
+  --medium-font: 1.5rem;
+  --large-font: 2rem;
+  --extra-font: 4rem;
 }
 
 body,
