--- a/apps/frontend/src/Pages/Login/login.css
+++ b/apps/frontend/src/Pages/Login/login.css
@@ -5,20 +5,36 @@
 }
 
 .login {
-    display: flex;
     height: 100vh;
-    justify-content: center;
     width: 100%;
     background-color: var(--secondary-color);
     overflow: hidden;
 }
 
-.login-container {
+.login__logo {
+    width: 100%;
+    display: flex;
+    justify-content: baseline;
+    margin-left: var(--normal-indent);
+}
+
+.login__container {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+}
+
+.login__form-container {
     display: flex;
     flex-direction: column;
     text-align: center;
     width: 325px;
     padding: var(--normal-indent);
+}
+
+.login__form-container__headline {
+    margin-top: var(--normal-indent);
+    margin-bottom: var(--normal-indent);
 }
 
 .login__form {
@@ -67,19 +83,14 @@
     background-color: var(--button-hovor-color);
 }
 
-.login__headline {
-    margin-top: var(--normal-indent);
-    margin-bottom: var(--normal-indent);
-}
-
-.login-questions {
+.login__form-container__questions {
     margin-top: var(--large-indent);
     display: flex;
     flex-direction: column;
     gap: var(--small-indent);
 }
 
-.login-questions a {
+.login__form-container__questions a {
     color: black;
 }
 
@@ -90,8 +101,8 @@
 @media only screen and (min-width: 1024px) {
     .login-image {
         display: block;
-        height: 500px;
-        width: 500px;
+        height: 600px;
+        width: 600px;
         position: fixed;
         left: -300px;
         bottom: -40px;
@@ -103,16 +114,19 @@
         position: absolute;
         transform: translateY(0);
 
-        animation: jump 1.5s ease-in-out infinite alternate;
+        animation: jump 2s ease infinite forwards;
     }
 
     @keyframes jump {
         0% {
             bottom: 0;
         }
-        50% {
-            bottom: 30px;
+        25%{
+            bottom: 40px
         }
+        30%{
+            bottom: 40px;
+        }    
         100% {
             bottom: 0;
         }
