--- a/apps/frontend/src/Pages/Login/login.css
+++ b/apps/frontend/src/Pages/Login/login.css
@@ -16,6 +16,12 @@
     display: flex;
     justify-content: baseline;
     margin-left: var(--normal-indent);
+    user-select: none;
+}
+
+.login__logo__link{
+    color: black;
+    text-decoration: none;
 }
 
 .login__container {
@@ -88,6 +94,11 @@
     display: flex;
     flex-direction: column;
     gap: var(--small-indent);
+}
+
+.login__form-container__headline{
+    user-select: none;
+
 }
 
 .login__form-container__questions a {
