--- a/apps/frontend/src/Pages/Register/register.css
+++ b/apps/frontend/src/Pages/Register/register.css
@@ -14,6 +14,12 @@
     display: flex;
     justify-content: baseline;
     margin-left: var(--normal-indent);
+    user-select: none;
+}
+
+.register__logo__link{
+    color: black;
+    text-decoration: none;
 }
 
 .register__container {
@@ -92,6 +98,10 @@
     color: black;
 }
 
+.register__form-container__headline{
+    user-select: none;
+}
+
 .error-message {
     color: var(--error-message);
 }
@@ -114,6 +124,7 @@
         animation: rotateAnimation 35s ease infinite forwards;
     }
 
+    /* Dont get scared when you see this, let the animation play so you know what it does */
     @keyframes rotateAnimation {
         0% {
             transform: rotate(0deg) translateX(0);
