--- a/apps/frontend/src/components/Navbar/navbar.css
+++ b/apps/frontend/src/components/Navbar/navbar.css
@@ -1,7 +1,7 @@
 .nav {
     background-color: var(--navbar-bg-color);
     width: 100%;
-    height: 8vh;
+    height: 70px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -9,6 +9,12 @@
 
 .nav__site-name {
     margin-left: var(--normal-indent);
+}
+
+.nav__site-name__link {
+    color: var(--text-color);
+    text-decoration: none;
+    user-select: none;
 }
 
 .nav__login {
