--- a/apps/frontend/src/Pages/Components/components.css
+++ b/apps/frontend/src/Pages/Components/components.css
@@ -12,6 +12,7 @@
     flex-direction: column;
     gap: var(--normal-indent);
     position: sticky;
+    align-items: center;
 }
 
 .filter--price {
