--- a/apps/frontend/src/app/app.css
+++ b/apps/frontend/src/app/app.css
@@ -1,3 +1,6 @@
 body {
     background-color: var(--primary-color);
+    display: flex;
+    flex-direction: column;
+    justify-content: space-evenly;
 }
