--- a/apps/frontend/src/Pages/Components/components.css
+++ b/apps/frontend/src/Pages/Components/components.css
@@ -1,13 +1,13 @@
 .components {
     background-color: white;
-    gap: var(--large-indent)
+    gap: var(--large-indent);
 }
 
 .filter--headline {
     font-size: var(--medium-font);
 }
 
-.filter--filters{
+.filter--filters {
     border-radius: var(--normal-indent);
 }
 
@@ -19,10 +19,9 @@
     align-items: center;
     padding: var(--large-indent);
     box-shadow: 8px 0px 12px rgba(0, 0, 0, 0.089);
-
 }
 
-.filter--line{
+.filter--line {
     opacity: 0.3;
 }
 
@@ -39,7 +38,7 @@
     user-select: none;
 }
 
-.components-container{
+.components-container {
     padding: var(--normal-indent);
     display: flex;
     flex-direction: column;
@@ -47,16 +46,15 @@
 }
 
 @media only screen and (min-width: 1024px) {
-    .components{
+    .components {
         display: flex;
     }
 
-    .components__filter-container{
+    .components__filter-container {
         width: 300px;
     }
 
-    .components-container{
+    .components-container {
         width: 100%;
     }
-
 }
