--- a/apps/frontend/src/components/Navbar/navbar.css
+++ b/apps/frontend/src/components/Navbar/navbar.css
@@ -22,11 +22,12 @@
     display: flex;
 }
 
-.nav__icons {
+.nav-mobile {
     display: flex;
     align-items: center;
     justify-content: center;
     height: 100%;
+    margin-right: var(--normal-indent);
 }
 
 .icon-container {
@@ -56,7 +57,7 @@
         margin-right: var(--normal-indent);
     }
 
-    .nav__icons {
+    .nav-mobile {
         display: none;
     }
 }
