fix: auth provider dont with local storage

--- a/apps/frontend/src/Pages/Login/login.css
+++ b/apps/frontend/src/Pages/Login/login.css
@@ -58,6 +58,7 @@
     background-color: #ffffff;
     box-shadow: var(--input-box-shadow);
     border-radius: 0.5rem;
+    z-index: 1;
 }
 
 .form-input:focus {
