--- a/apps/frontend/src/Pages/Dashboard/dashboard.css
+++ b/apps/frontend/src/Pages/Dashboard/dashboard.css
@@ -1,20 +1,20 @@
 .dashboard {
-  background-color: var(--secondary-color);
-  padding: var(--normal-indent);
-  display: flex;
-  flex-direction: column;
-  gap: var(--normal-indent)
+    background-color: var(--secondary-color);
+    padding: var(--normal-indent);
+    display: flex;
+    flex-direction: column;
+    gap: var(--normal-indent);
 }
 
 .dashboard__component-selectors {
-  display: flex;
-  gap: var(--medium-indent);
+    display: flex;
+    gap: var(--medium-indent);
 }
 
-.dashboard__component-selectors > div{
-  flex: 1;
+.dashboard__component-selectors > div {
+    flex: 1;
 }
 
-.dashboard__component-selectors > div > *{
-  width: 100%;
+.dashboard__component-selectors > div > * {
+    width: 100%;
 }
