--- a/apps/frontend/src/Pages/DashboardComponents/outlet.css
+++ b/apps/frontend/src/Pages/DashboardComponents/outlet.css
@@ -1,5 +1,5 @@
 .dashboard-components {
-  display: flex;
-  flex-direction: column;
-  gap: var(--normal-indent)
+    display: flex;
+    flex-direction: column;
+    gap: var(--normal-indent);
 }
