--- a/apps/frontend/src/components/Dialogs/dialog.css
+++ b/apps/frontend/src/components/Dialogs/dialog.css
@@ -9,7 +9,7 @@
     grid-template-rows: 1fr;
     grid-column-gap: 0px;
     grid-row-gap: 0px;
-    gap: var(--normal-indent)
+    gap: var(--normal-indent);
 }
 
 .dialog-form__grid--first {
