fix: image to formdata

--- a/apps/frontend/src/Pages/Dashboard/dashboard.css
+++ b/apps/frontend/src/Pages/Dashboard/dashboard.css
@@ -18,3 +18,9 @@
 .dashboard__component-selectors > div > * {
     width: 100%;
 }
+
+.dashboard-components {
+    display: flex;
+    flex-direction: column;
+    gap: var(--normal-indent)
+}
