--- a/apps/frontend/src/Pages/Dashboard/dashboard.css
+++ b/apps/frontend/src/Pages/Dashboard/dashboard.css
@@ -22,5 +22,5 @@
 .dashboard-components {
     display: flex;
     flex-direction: column;
-    gap: var(--normal-indent)
+    gap: var(--normal-indent);
 }
