--- a/apps/frontend/src/Pages/Dashboard/dashboard.css
+++ b/apps/frontend/src/Pages/Dashboard/dashboard.css
@@ -9,6 +9,7 @@
 .dashboard__component-selectors {
     display: flex;
     gap: var(--medium-indent);
+    flex-wrap: wrap;
 }
 
 .dashboard__component-selectors > div {
