fix: auth provider better file decomposition

--- a/apps/frontend/src/globalStyles.css
+++ b/apps/frontend/src/globalStyles.css
@@ -25,6 +25,11 @@
     --medium-font: 1.5rem;
     --large-font: 2rem;
     --extra-font: 4rem;
+
+    /* Form  */
+    --input-box-shadow: 0 2px 4px rgba(0, 0, 0, 0.315);
+    --input-border: 2px solid rgba(0, 0, 0, 0.075);
+    --button-hovor-color: rgba(0, 0, 0, 0.842);
 }
 
 body,
