--- a/apps/frontend/src/components/Navbar/navbar.css
+++ b/apps/frontend/src/components/Navbar/navbar.css
@@ -20,6 +20,8 @@
 .nav__login {
     height: 100%;
     display: flex;
+    align-items: center;
+    gap: var(--normal-indent);
 }
 
 .nav-mobile {
