--- a/apps/frontend/src/pages/Components/components.css
+++ b/apps/frontend/src/pages/Components/components.css
@@ -1,5 +1,6 @@
 .components {
     background-color: white;
+    display: flex;
 }
 
 .filter--headline {
@@ -18,6 +19,7 @@
     align-items: center;
     padding: var(--large-indent);
     box-shadow: 8px 0px 12px rgba(0, 0, 0, 0.089);
+    flex: 1;
 }
 
 .filter--line {
@@ -55,4 +57,27 @@
     .components-container {
         width: 100%;
     }
+}
+
+.dashboard__component-selectors {
+    display: flex;
+    gap: var(--medium-indent);
+    flex-wrap: wrap;
+}
+
+.dashboard__component-selectors > div {
+    flex: 1;
+}
+
+.dashboard__component-selectors > div > * {
+    width: 100%;
+}
+
+.dashboard {
+    background-color: var(--secondary-color);
+    padding: var(--normal-indent);
+    display: flex;
+    flex-direction: column;
+    gap: var(--normal-indent);
+    flex: 4;
 }
